feat: Implement robust PR-based deployment system with versioning and rollback
- Add explicit create/update flags for PR workflow based on GitHub event types
- Implement runtime status polling before endpoint operations
- Fix PR reopened event handling (recreate runtime after cleanup)
- Update PR endpoints to track latest version after runtime updates
- Improve error handling with specific ClientError exceptions
- Optimize GitHub Actions output (remove redundant parsing)
- Add runtime ready wait to rollback script
- Capture runtime ARN from update response (eliminate extra API call)
- Fix misleading comments about endpoint version behavior
- Explicitly set version for PR endpoint creation

This implementation ensures:
- Isolation: Each PR gets its own ephemeral runtime
- Versioning: All versions coexist on shared production runtime
- Instant Rollback: Change endpoint pointers without rebuilding

--- a/.github/workflows/cleanup-pr.yml
+++ b/.github/workflows/cleanup-pr.yml
@@ -24,8 +24,16 @@ jobs:
           
           echo "🗑️  Deleting runtime: $RUNTIME_NAME"
           
-          aws bedrock-agent delete-agent-runtime \
-            --runtime-name "$RUNTIME_NAME" \
-            --region us-east-1 || echo "Runtime may not exist or already deleted"
+          # Get runtime ID from name
+          RUNTIME_ID=$(aws bedrock-agentcore-control list-agent-runtimes --region us-east-1 --query "agentRuntimes[?agentRuntimeName=='$RUNTIME_NAME'].agentRuntimeId" --output text)
+          
+          if [ -n "$RUNTIME_ID" ]; then
+            echo "Found runtime ID: $RUNTIME_ID"
+            aws bedrock-agentcore-control delete-agent-runtime \
+              --agent-runtime-id "$RUNTIME_ID" \
+              --region us-east-1 || echo "Failed to delete runtime"
+          else
+            echo "Runtime not found or already deleted"
+          fi
           
           echo "✅ Cleanup complete"
