--- a/.github/workflows/deploy-pr.yml
+++ b/.github/workflows/deploy-pr.yml
@@ -26,8 +26,8 @@ jobs:
         with:
           python-version: '3.11'
       
-      - name: Install bedrock-agentcore-starter-toolkit
-        run: pip install bedrock-agentcore-starter-toolkit boto3
+      - name: Install dependencies
+        run: pip install boto3
       
       - name: Deploy PR Runtime
         id: deploy
@@ -35,12 +35,21 @@ jobs:
           RUNTIME_NAME="demo-pr-${{ github.event.pull_request.number }}-runtime"
           ENDPOINT_NAME="PR-${{ github.event.pull_request.number }}-Endpoint"
           
-          python deploy.py "$RUNTIME_NAME" "$ENDPOINT_NAME"
+          # Use --create for opened/reopened, --update for subsequent commits
+          if [ "${{ github.event.action }}" == "opened" ] || [ "${{ github.event.action }}" == "reopened" ]; then
+            echo "Creating new runtime (PR opened or reopened)"
+            python deploy.py "$RUNTIME_NAME" "$ENDPOINT_NAME" --create
+          else
+            echo "Updating existing runtime (subsequent commit)"
+            python deploy.py "$RUNTIME_NAME" "$ENDPOINT_NAME" --update
+          fi
           
+          # deploy.py already writes runtime_id, runtime_arn, endpoint_name to $GITHUB_OUTPUT
+          # We only need to add runtime_name
           echo "runtime_name=$RUNTIME_NAME" >> $GITHUB_OUTPUT
-          echo "endpoint_name=$ENDPOINT_NAME" >> $GITHUB_OUTPUT
       
       - name: Comment PR
+        if: github.event.action == 'opened'
         uses: actions/github-script@v7
         with:
           script: |
@@ -49,7 +58,12 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: `🚀 **PR Preview Deployed!**\n\n` +
-                    `**Runtime:** \`${{ steps.deploy.outputs.runtime_name }}\`\n` +
+                    `**Runtime Name:** \`${{ steps.deploy.outputs.runtime_name }}\`\n` +
+                    `**Runtime ID:** \`${{ steps.deploy.outputs.runtime_id }}\`\n` +
+                    `**Runtime ARN:** \`${{ steps.deploy.outputs.runtime_arn }}\`\n` +
                     `**Endpoint:** \`${{ steps.deploy.outputs.endpoint_name }}\`\n\n` +
-                    `Test with: \`python scripts/test_endpoint.py ${{ steps.deploy.outputs.endpoint_name }}\``
+                    `**Test with:**\n` +
+                    `\`\`\`bash\n` +
+                    `python scripts/test_endpoint.py ${{ steps.deploy.outputs.runtime_arn }} ${{ steps.deploy.outputs.endpoint_name }} "Your prompt here"\n` +
+                    `\`\`\``
             })
