Fix deploy script and enhance workflows
- Fix S3 parameter from 'prefix' to 'key' in create/update runtime calls
- Enhance cleanup workflow to delete endpoints before runtime deletion
- Add pre-deployment permission verification scripts
- Add comprehensive code review documentation

These changes address:
- Semantic correctness in S3 API calls
- Prevent cleanup failures due to dependent endpoints
- Enable easier IAM permission troubleshooting

--- a/.github/workflows/cleanup-pr.yml
+++ b/.github/workflows/cleanup-pr.yml
@@ -25,13 +25,36 @@ jobs:
           echo "🗑️  Deleting runtime: $RUNTIME_NAME"
           
           # Get runtime ID from name
-          RUNTIME_ID=$(aws bedrock-agentcore-control list-agent-runtimes --region us-east-1 --query "agentRuntimes[?agentRuntimeName=='$RUNTIME_NAME'].agentRuntimeId" --output text)
+          RUNTIME_ID=$(aws bedrock-agentcore list-agent-runtimes --region us-east-1 --query "agentRuntimes[?agentRuntimeName=='$RUNTIME_NAME'].agentRuntimeId" --output text)
           
           if [ -n "$RUNTIME_ID" ]; then
             echo "Found runtime ID: $RUNTIME_ID"
-            aws bedrock-agentcore-control delete-agent-runtime \
+            
+            # Delete all endpoints first
+            echo "🔍 Listing endpoints for runtime..."
+            ENDPOINTS=$(aws bedrock-agentcore list-agent-runtime-endpoints \
               --agent-runtime-id "$RUNTIME_ID" \
-              --region us-east-1 || echo "Failed to delete runtime"
+              --region us-east-1 \
+              --query "agentRuntimeEndpoints[].name" \
+              --output text 2>/dev/null || echo "")
+            
+            if [ -n "$ENDPOINTS" ]; then
+              for ENDPOINT in $ENDPOINTS; do
+                echo "🗑️  Deleting endpoint: $ENDPOINT"
+                aws bedrock-agentcore delete-agent-runtime-endpoint \
+                  --agent-runtime-id "$RUNTIME_ID" \
+                  --endpoint-name "$ENDPOINT" \
+                  --region us-east-1 || echo "⚠️  Failed to delete endpoint $ENDPOINT"
+              done
+            else
+              echo "✓ No endpoints found"
+            fi
+            
+            # Now delete the runtime
+            echo "🗑️  Deleting runtime..."
+            aws bedrock-agentcore delete-agent-runtime \
+              --agent-runtime-id "$RUNTIME_ID" \
+              --region us-east-1 || echo "❌ Failed to delete runtime"
           else
             echo "Runtime not found or already deleted"
           fi
