Fix: Use underscores instead of hyphens in runtime names
AWS Bedrock AgentCore runtime names must match pattern: [a-zA-Z][a-zA-Z0-9_]{0,47}
This means only letters, numbers, and underscores are allowed (no hyphens).

Changes:
- demo-prod-runtime → demo_prod_runtime
- demo-prod-endpoint → demo_prod_endpoint
- demo-pr-{PR#}-runtime → demo_pr_{PR#}_runtime
- PR-{PR#}-Endpoint → PR_{PR#}_Endpoint

Updated files:
- .github/workflows/deploy-prod.yml
- .github/workflows/deploy-pr.yml
- .github/workflows/cleanup-pr.yml
- README.md

This fixes ValidationException: Member must satisfy regular expression pattern

--- a/.github/workflows/cleanup-pr.yml
+++ b/.github/workflows/cleanup-pr.yml
@@ -20,7 +20,7 @@ jobs:
       
       - name: Delete PR Runtime
         run: |
-          RUNTIME_NAME="demo-pr-${{ github.event.pull_request.number }}-runtime"
+          RUNTIME_NAME="demo_pr_${{ github.event.pull_request.number }}_runtime"
           
           echo "🗑️  Deleting runtime: $RUNTIME_NAME"
           
